2011-07-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/toolbar.c, src/status-icon.c, src/prefs.c, src/notes-area.c,
	src/menus.c, src/menucmd.c, src/main.c, src/gconf-io.c, src/app.c:
	Removed direct 	references to private GTK struct members in order
	to make it buildable with the -DGSEAL_ENABLE option.

2011-03-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am (gnotime_LDADD): Added -lX11, fixing build with
	binutils-gold.

2010-11-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (backups_exist): Added function to check if there are
	backup files in the data directory.
	(try_restoring_backup): check if there are backups in the data dir
	before offering to load a backup file.

2010-11-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (try_restoring_backup): Display error message when
	it's not possible to copy backup file.

2010-10-12  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (try_restoring_backup): do the interaction with the
	user for backup restoring outside of the read_data function.

2010-09-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/journal.glade: Fixed button tooltips

2010-05-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (choose_backup_file): Added function to choose one of
	the backups to load.
	(read_data): Offer the user a chance to load a previous backup
	when reading the data file fails.

2010-01-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* website/example-invoice.html: Applied patch #2937959, fixing a
	typo in the report. Thanks Christos Kontas for the patch.

2010-01-04  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c: Added missing include of math.h for functions
	lround and round.

2009-11-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.c (gtt_project_get_secs_current): return the time for
	the currently selected diary entry instead of the head of the task
	list.
