@@ -1,3 +1,8 @@
+2011-07-11  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/active-dialog.c, glade/active.glade: Use GtkComboBox instead
+	of GtkOptionMenu in the start project dialog.
+
 2011-07-10  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/toolbar.c, src/status-icon.c, src/prefs.c, src/notes-area.c,
